[package]
name = "tokio-listener"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vi/tokio-listener"
license = "MIT/Apache-2.0"
description = "Add flexibility in a way of accepting connections: unix sockets, socket activation, inetd mode to Tokio-based projects."
categories = ["network-programming", "command-line-interface"]
keywords = ["tokio","unix", "systemd", "socket-activation", "clap"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## Enable `derive(Parser)` for [`UserOptions`] and other Clap helpers
clap = { version = "4.3.11", default-features = false, features = ["derive", "std"], optional=true }

document-features = "0.2.7"
futures-core = "0.3.28"
hyper = { version = "0.14.27", optional = true, features = ["server"] }
pin-project = "1.1.2"
serde = { version = "1.0.171", features = ["derive"] , optional = true}
serde_with = { version = "3.0.0", optional = true}
socket2 = {version="0.5.3", optional=true}
tokio = { version = "1.29.1", features = ["net", "io-std", "time", "sync"] }
tracing = "0.1.37"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = ["user", "fs"], optional=true }


[features]
default = ["hyper014", "user_facing_default"]

## Subset of default features that add features supposed to be accessed by end user
user_facing_default = ["inetd", "unix", "unix_path_tools", "sd_listen", "socket_options"]

## Enable `serde::Serialize` and `serde::Deserialize` implementations for [`UserOptions`] and [`ListenerAddress`] and some other types.
serde = ["dep:serde", "serde_with"]

## Enable `hyper(v0.14)::server::accept::Accept` implementation for [`Listener`]
hyper014 = ["hyper"]

## Enable inetd (stdin/stdout) mode
inetd = []

## Enable UNIX socket mode
unix = []

## Enable tools such as unlink/chmod/chown for UNIX path sockets in [`UserOptions`]
unix_path_tools = ["nix"]

## Enable constructing sockets from inherited file descriptor. Disabling this should make the crate `unsafe`-free.
sd_listen = []

## Enable socket options such as receive or send buffer sizes or keepalives in [`UserOptions`]
socket_options = ["socket2"]

[dev-dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
axum = "0.6.18"
clap = { version = "4.3.11", features = ["help"] }
hyper = { version = "0.14.27", features = ["server", "http1"] }
tokio = { version = "1.29.1", features = ["macros", "rt", "io-util"] }
tokio-test = "0.4.2"
toml = "0.7.6"
tracing-subscriber = "0.3.17"

[[example]]
name = "serde_echo"
required-features = ["serde"]


[[example]]
name = "clap_axum"
required-features = ["clap","hyper014"]


[[example]]
name = "argh_hyper"
required-features = ["hyper014"]

[package.metadata."docs.rs"]
all-features = true
